--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -3,8 +3,6 @@ name: Build APK
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -12,38 +10,61 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Setup Java
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
-        distribution: 'zulu'
+        distribution: 'temurin'
         java-version: '17'
     
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.24.0'
+        flutter-version: '3.24.5'
         channel: 'stable'
+        cache: true
+    
+    - name: Flutter doctor
+      run: flutter doctor -v
     
     - name: Get dependencies
       run: flutter pub get
     
-    - name: Build APK
-      run: flutter build apk --release
+    - name: Analyze code
+      run: flutter analyze --no-fatal-infos
+      continue-on-error: true
     
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
+    - name: Build APK
+      run: flutter build apk --release --verbose
+    
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
       with:
-        name: christify-release
+        name: christify-apk
         path: build/app/outputs/flutter-apk/app-release.apk
+        retention-days: 30
     
     - name: Create Release
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       uses: softprops/action-gh-release@v1
       with:
         tag_name: v1.0.${{ github.run_number }}
-        name: Release v1.0.${{ github.run_number }}
+        name: Christify v1.0.${{ github.run_number }}
+        body: |
+          ## Christify - Christian Quotes App
+          
+          Download and install the APK on your Android device.
+          
+          ### Features
+          - 15 Gen Z Christian motivational quotes
+          - Swipeable interface
+          - Dark mode support
+          - Favorites system
+          - Share functionality
         files: build/app/outputs/flutter-apk/app-release.apk
+        draft: false
+        prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
