--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,77 +18,7 @@ jobs:
       with:
         distribution: 'zulu'
         java-version: '17'
+        cache: 'gradle'
     
     - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '3.24.5'
-        channel: 'stable'
-        cache: true
-    
-    - name: Verify Flutter installation
-      run: |
-        flutter --version
-        flutter doctor -v
-    
-    - name: Clean and get dependencies
-      run: |
-        flutter clean
-        flutter pub get
-    
-    - name: Build APK (Debug for testing)
-      run: flutter build apk --debug --verbose
-      continue-on-error: false
-    
-    - name: Upload Debug APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: christify-debug-apk
-        path: build/app/outputs/flutter-apk/app-debug.apk
-        retention-days: 30
-    
-    - name: Build APK (Release)
-      run: flutter build apk --release --verbose
-      continue-on-error: true
-    
-    - name: Upload Release APK
-      if: success()
-      uses: actions/upload-artifact@v4
-      with:
-        name: christify-release-apk
-        path: build/app/outputs/flutter-apk/app-release.apk
-        retention-days: 30
-    
-    - name: Create Release
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: v1.0.${{ github.run_number }}
-        name: Christify v1.0.${{ github.run_number }}
-        body: |
-          ## Christify - Christian Quotes App for Gen Z
-          
-          Download and install the APK on your Android device.
-          
-          ### What's Included
-          - Debug APK (for testing)
-          - Release APK (for production)
-          
-          ### Features
-          - 15 Gen Z Christian motivational quotes
-          - Swipeable TikTok-style interface
-          - Dark mode support
-          - Favorites system
-          - Share to social media
-          
-          ### Installation
-          1. Download the APK file
-          2. Enable "Install from Unknown Sources" on your Android device
-          3. Install and enjoy!
-        files: |
-          build/app/outputs/flutter-apk/app-debug.apk
-          build/app/outputs/flutter-apk/app-release.apk
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: 
