--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,15 +1,14 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
+    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
-    localPropertiesFile.withReader('UTF-8') { reader ->
-        localProperties.load(reader)
-    }
+    localProperties.load(new FileInputStream(localPropertiesFile))
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -22,9 +21,17 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+// --- THIS IS THE KEYSTORE LOADING LOGIC ---
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+// ------------------------------------------
+
 android {
-    namespace "com.christify.app"
-    compileSdk 34
+    namespace "com.example.christify" // Standard Flutter Namespace
+    compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -41,16 +48,35 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.christify.app"
-        minSdk 21
-        targetSdk 34
+        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        applicationId "com.example.christify"
+        // You can update the following values to match your application needs.
+        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+        minSdkVersion flutter.minSdkVersion
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
+    // --- THIS IS THE SIGNING CONFIGURATION ---
+    signingConfigs {
+        release {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+            storePassword keystoreProperties['storePassword']
+        }
+    }
+    // ----------------------------------------
+
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            // Applies the signing config we defined above
+            signingConfig signingConfigs.release
+            
+            // Minify set to false to prevent "R8" crashing errors
+            minifyEnabled false 
+            shrinkResources false
         }
     }
 }
@@ -58,5 +84,3 @@ android {
 flutter {
     source '../..'
 }
-
-dependencies {}
