--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,10 @@ if (keystorePropertiesFile.exists()) {
 // --------------------
 
 android {
-    // We removed the strict 'namespace' line to use the one in your Manifest instead
+    // === THIS WAS MISSING AND CAUSED THE CRASH ===
+    namespace "com.example.christify" 
+    // ============================================
+
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
@@ -47,7 +50,6 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.christify"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
@@ -72,8 +74,7 @@ android {
         }
     }
     
-    // === THIS IS THE FIX ===
-    // This tells Gradle to ignore strict errors so the build finishes
+    // This prevents small warnings from stopping the build
     lintOptions {
         checkReleaseBuilds false
         abortOnError false
